# appery_express_swagger_conversion

./: README.md  pyproject.toml
swagger_conversion/: .gitignore  config.py  json_parser.py  log_init.py
swagger_conversion/cli/: main.py
swagger_conversion/llm/: anthropic_client.py  base_client.py  openai_client.py
swagger_conversion/model/: function_description.py  message_container.py
swagger_conversion/templates/: renderer.py
swagger_conversion/test/integration/: test_anthropic_client.py  test_openai_client.py
swagger_conversion/test/provider/: message_convo_provider.py
swagger_conversion/test/unit/: test_config.py  test_json_parser.py  test_merge_from_generated.py  test_message_container.py  test_renderer.py  test_schema_validation.py
templates/: swagger_conversion.prompt  swagger_conversion_system.prompt
